# Intern_Assignment

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
SER/: README.md  app.py  audio.ipynb  utility.py
face_mesh/: README.md  app.py
face_mesh/src/capture/: webcam.py
face_mesh/src/detector/: face_detector.py
face_mesh/src/render/: landmark_renderer.py
resume_task/: README.md  app.py
resume_task/src/extractor/: pdf_extractor.py  text_cleaner.py
resume_task/src/matcher/: skills.py
resume_task/src/scorer/: tfidf_cosine.py
resume_task/tests/: test_all.py
websocket_echobot/: README.md  client.py  server.py
