[project]
name = "intern-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk==3.8.1",
    "numpy==1.26.4",
    "pdfplumber==0.11.0",
    "pytest==8.2.1",
    "reportlab==4.2.0",
    "scikit-learn==1.5.0",
    "streamlit==1.35.0",
]
[tool.pytest.ini_options]
pythonpath = ["resume_task"]
testpaths = ["resume_task/tests"]
